--- a/src/styles/components/_imgCollage.scss
+++ b/src/styles/components/_imgCollage.scss
@@ -2,11 +2,13 @@
     margin: 10rem 0 0 0;
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-blue-light, $color-primary-blue-dark);
+    background-size: cover;
 }
 
 .split {
     background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(../img/b-w-bridge.jpg);
-    background-size: 100%;
+    background-size: cover;
+    width: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
     height: 50rem;               
@@ -20,7 +22,7 @@
     margin: 8rem 0;
 
     &__photo {
-        width: 60%;
+        width: auto;
         height: 60%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
         border-radius: 2px;
@@ -57,10 +59,10 @@
 }
 
 .info-card {
-    display: block;
+    display: inline;
     width: 100%;
     height: 40rem;
-    margin: 20rem 20rem;
+    //margin: 20rem;
     font-size: 2rem;
     color: $color-white;
 
